--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,8 +16,21 @@
 }
 
 @layer base {
+	html {
+		width: 100%;
+		height: 100%;
+		font-family: 'barlow-medium';
+	}
+
 	body {
+		width: 100%;
+		height: 100%;
+
 		font-size: 1.4rem;
+
+		#root{
+			height: 100%;
+		}
 
 		@screen md {
 			font-size: 1.5rem;
