--- a/src/styles/pages_styles/Home.module.css
+++ b/src/styles/pages_styles/Home.module.css
@@ -26,21 +26,40 @@
   white-space: nowrap;
 }
 
-.bgGradientCard {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  background: linear-gradient(#1e1e1e96, #020202ee);
-}
 
 .movieItem {
   flex: 0 0 auto;
   width: 15rem;
   height: 20rem;
   position: relative;
+  transition: opacity 0.3s ease;
 }
+
+.movieItem:hover{
+    transition: display .9s ease-out;
+
+  .movieTitle{
+    display: flex;
+      transition: display .9s ease-out;
+  }
+  .bgGradientCard{
+  background: linear-gradient(#1e1e1e96, #020202ee);
+      transition: background .9s ease-out;
+
+  }
+}
+
+.bgGradientCard {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  /* background: linear-gradient(#1e1e1e96, #020202ee); */
+}
+
 .movieTitle{
-  display: flex;
+  display: hidden;
   flex-direction: column;
   position: absolute;
   width: 100%;
@@ -49,5 +68,11 @@
   color: antiquewhite;
   text-align: center;
   white-space: break-spaces;
+  transition: all 0.6s;
+  /* transform: translateY(30px); */
   z-index: 2;
+}
+
+.fadeIn{
+  opacity: 1;
 }
