--- a/src/styles/pages_styles/Home.module.css
+++ b/src/styles/pages_styles/Home.module.css
@@ -1,78 +1,76 @@
 .bgGradient {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  background: linear-gradient(#5c5c5c52, #020202cf);
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	background: linear-gradient(#5c5c5c52, #020202cf);
 }
 
 .txtReflect {
-  position: absolute;
-  top: 28.5rem;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  font-size: 4.5vw;
-  font-family: 'bayon';
-  color: rgb(231, 228, 216);
-  -webkit-box-reflect: below -3vw linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0, 0, 0, 0.285));
+	position: absolute;
+	top: 28.5rem;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	font-size: 4.5vw;
+	font-family: 'bayon';
+	color: rgb(231, 228, 216);
+	-webkit-box-reflect: below -3vw linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.285));
 }
 
-.scrollSection{
-  display: flex;
-  padding: 1rem 0;
-  gap: 2rem;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-  white-space: nowrap;
+.scrollSection {
+	display: flex;
+	padding: 1rem 0;
+	gap: 2rem;
+	overflow-x: auto;
+	scroll-behavior: smooth;
+	white-space: nowrap;
 }
-
 
 .movieItem {
-  flex: 0 0 auto;
-  width: 15rem;
-  height: 20rem;
-  position: relative;
-  transition: opacity 0.3s ease;
+	flex: 0 0 auto;
+	width: 15rem;
+	height: 20rem;
+	position: relative;
+	transition: opacity 0.3s ease;
 }
 
-.movieItem:hover{
-    transition: display .9s ease-out;
+.movieItem:hover {
+	transition: display 0.9s ease-out;
 
-  .movieTitle{
-    display: flex;
-      transition: display .9s ease-out;
-  }
-  .bgGradientCard{
-  background: linear-gradient(#1e1e1e96, #020202ee);
-      transition: background .9s ease-out;
-
-  }
+	.movieTitle {
+		display: flex;
+		transition: display 0.9s ease-out;
+	}
+	.bgGradientCard {
+		background: linear-gradient(#1e1e1e96, #020202ee);
+		transition: background 0.9s ease-out;
+	}
 }
 
 .bgGradientCard {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  /* background: linear-gradient(#1e1e1e96, #020202ee); */
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	opacity: 0;
+	transition: opacity 0.3s ease;
+	/* background: linear-gradient(#1e1e1e96, #020202ee); */
 }
 
-.movieTitle{
-  display: hidden;
-  flex-direction: column;
-  position: absolute;
-  width: 100%;
-  top: 30%;
-  gap: 2rem;
-  color: antiquewhite;
-  text-align: center;
-  white-space: break-spaces;
-  transition: all 0.6s;
-  /* transform: translateY(30px); */
-  z-index: 2;
+.movieTitle {
+	display: hidden;
+	flex-direction: column;
+	position: absolute;
+	width: 100%;
+	top: 30%;
+	gap: 2rem;
+	color: antiquewhite;
+	text-align: center;
+	white-space: break-spaces;
+	transition: all 0.6s;
+	/* transform: translateY(30px); */
+	z-index: 2;
 }
 
-.fadeIn{
-  opacity: 1;
+.fadeIn {
+	opacity: 1;
 }
